feat: add edit route, put route for profile page

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,6 +4,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="/css/profile.css">
 <!-- Navbar -->
+<%- include('partials/alerts') %> 
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
